--- a/src/components/main-layout/header/header-menu/header-cart/HeaderCart.module.scss
+++ b/src/components/main-layout/header/header-menu/header-cart/HeaderCart.module.scss
@@ -1,11 +1,58 @@
-.header_menu{
-  @apply hidden items-center gap-x-2 ml-auto lg:flex;
+.cart{
+  @apply h-full flex flex-col;
 
-  .avatar{
-    @apply rounded-full;
+  .items{
+    @apply flex flex-col w-full flex-1;
+
+    > .item{
+      @apply flex items-center mb-5;
+
+      > .image{
+        @apply relative h-28 w-28 rounded-lg overflow-hidden;
+
+        > img{
+          @apply object-cover;
+        }
+      }
+
+      > .right{
+        @apply ml-6;
+
+        > h2 {
+          @apply font-medium line-clamp-1;
+        }
+
+        > p {
+          @apply text-muted-foreground text-sm mt-1;
+        }
+
+        > .actions{
+          @apply flex items-center mt-1;
+
+          input{
+            @apply w-10 text-center text-sm;
+          }
+
+          button{
+            @apply size-7;
+
+            svg{
+              @apply size-4;
+            }
+          }
+        }
+      }
+    }
+    > .not_found{
+      @apply text-muted-foreground text-sm;
+    }
   }
 
-  .icon{
-    @apply size-4 mr-2;
+  > .total{
+    @apply text-lg font-medium;
+  }
+
+  > button{
+    @apply w-full;
   }
 }
