--- a/src/components/main-layout/header/header-menu/HeaderMenu.module.scss
+++ b/src/components/main-layout/header/header-menu/HeaderMenu.module.scss
@@ -1,5 +1,5 @@
 .header_menu{
-  @apply hidden items-center gap-x-2 ml-auto lg:flex;
+  @apply hidden items-center gap-x-2 ml-auto lg:flex text-white;
 
   .avatar{
     @apply rounded-full;
