--- a/src/app/(root)/hero/Hero.module.scss
+++ b/src/app/(root)/hero/Hero.module.scss
@@ -2,7 +2,7 @@
   @apply my-24 py-20 mx-auto text-center flex flex-col items-center max-w-4xl space-y-6;
 
   > .heading{
-    @apply text-4xl font-bold tracking-tight md:text-5xl;
+    @apply text-4xl font-bold tracking-tight md:text-5xl text-white;
 
     > span{
       @apply text-red-500;
