--- a/src/app/(root)/product/[id]/product-info/ProductInfo.module.scss
+++ b/src/app/(root)/product/[id]/product-info/ProductInfo.module.scss
@@ -1,5 +1,5 @@
 .product_info{
-  @apply mt-10 space-y-5 sm:mt-16 lg:mt-0;
+  @apply mt-10 space-y-5 sm:mt-16 lg:mt-0 text-white;
 
   hr {
     @apply my-4;
