--- a/src/components/main-layout/footer/Footer.module.scss
+++ b/src/components/main-layout/footer/Footer.module.scss
@@ -1,7 +1,7 @@
 .wrapper{
-  @apply border-t mt-16;
+  @apply border-t border-[#27272A] mt-16;
 
   > .footer{
-    @apply mx-auto py-5 text-center;
+    @apply mx-auto py-5 text-center text-white;
   }
 }
