--- a/src/components/main-layout/header/Header.module.scss
+++ b/src/components/main-layout/header/Header.module.scss
@@ -1,5 +1,5 @@
 .header{
-  @apply p-5 gap-x-4 h-full flex items-center bg-white border-b;
+  @apply p-5 gap-x-4 h-full flex items-center bg-[#09090B] border-b border-[#27272A];
 
   > .search{
     @apply ml-auto hidden w-[40%] lg:block;
