--- a/src/components/main-layout/header/logo/Logo.module.scss
+++ b/src/components/main-layout/header/logo/Logo.module.scss
@@ -2,6 +2,6 @@
   @apply flex items-center gap-x-3 hover:opacity-75 transition-opacity;
 
   > div {
-    @apply text-2xl font-bold text-blue-600;
+    @apply text-2xl font-bold text-[#EBEBEB];
   }
 }
