--- a/src/components/store-layout/sidebar/navigation/Navigation.module.scss
+++ b/src/components/store-layout/sidebar/navigation/Navigation.module.scss
@@ -5,14 +5,14 @@
     @apply flex flex-col w-full space-y-3;
 
     > .route{
-      @apply flex items-center gap-x-3 text-slate-500 text-sm font-medium py-2.5 px-3 rounded-lg hover:bg-blue-200/20 hover:text-blue-500 hover:drop-shadow-sm bg-transparent transition-all duration-200;
+      @apply flex items-center gap-x-3 text-slate-500 text-sm font-medium py-2.5 px-3 rounded-lg hover:bg-red-200/20 hover:text-red-500 hover:drop-shadow-sm bg-transparent transition-all duration-200;
   
       > svg {
         @apply size-5;
       }
   
       &.active{
-        @apply text-sm text-blue-500 bg-blue-200/20 hover:bg-blue-200/20 hover:text-blue-500;
+        @apply text-sm text-red-500 bg-red-200/20 hover:bg-red-200/20 hover:text-red-500;
       }
     }
   }
