--- a/src/components/ui/catalog/Catalog.module.scss
+++ b/src/components/ui/catalog/Catalog.module.scss
@@ -6,7 +6,7 @@
       @apply max-w-2xl px-4 lg:max-w-full lg:px-0;
       
       > h1 {
-        @apply text-2xl font-bold;
+        @apply text-2xl font-bold text-white;
       }
 
       > p {
