Обновление стилей и логики компонентов: добавление поддержки темной темы, исправление вызова функции logout, замена DASHBOARD_URL на PUBLIC_URL, улучшение стилей для различных элементов интерфейса

--- a/src/components/ui/catalog/product-card/ProductCard.module.scss
+++ b/src/components/ui/catalog/product-card/ProductCard.module.scss
@@ -1,5 +1,5 @@
 .card{
-  @apply bg-[#020817] rounded-xl p-2;
+  @apply bg-[#020817] border border-[#1E293B] rounded-xl p-2;
 
   img{
     @apply rounded-lg;
