--- a/src/components/store-layout/StoreLayout.module.scss
+++ b/src/components/store-layout/StoreLayout.module.scss
@@ -3,15 +3,15 @@
 
   > .layout{
     > .header {
-      @apply h-[70px] lg:pl-64 fixed inset-y-0 w-full z-[49];
+      @apply h-[70px] lg:pl-64 fixed inset-y-0 w-full z-[49] bg-[#09090B];
     }
 
     > .sidebar {
-      @apply hidden lg:flex h-full w-64 flex-col fixed inset-y-0 z-[50];
+      @apply hidden lg:flex h-full w-64 flex-col fixed inset-y-0 z-[50] bg-[#09090B];
     }
 
     > main {
-      @apply lg:pl-64 py-[70px] bg-white;
+      @apply lg:pl-64 py-[70px] bg-[#09090B] text-white;
     }
   }
 }
