--- a/src/components/store-layout/header/Header.module.scss
+++ b/src/components/store-layout/header/Header.module.scss
@@ -1,5 +1,5 @@
 .header{
-  @apply p-6 gap-x-4 h-full flex items-center bg-white border-b;
+  @apply p-6 gap-x-4 h-full flex items-center bg-[#09090B] border-b border-[#27272A];
 
   > .header_menu{
     @apply flex items-center gap-x-4 ml-auto;
