--- a/src/components/store-layout/sidebar/Sidebar.module.scss
+++ b/src/components/store-layout/sidebar/Sidebar.module.scss
@@ -1,3 +1,3 @@
 .sidebar{
-  @apply h-full flex flex-col bg-neutral-50 border-r overflow-y-auto pt-4 px-5;
+  @apply h-full flex flex-col bg-[#09090B] border-r border-[#27272A] overflow-y-auto pt-4 px-5;
 }
