--- a/src/app/(root)/hero/Hero.module.scss
+++ b/src/app/(root)/hero/Hero.module.scss
@@ -5,7 +5,7 @@
     @apply text-4xl font-bold tracking-tight md:text-5xl text-white;
 
     > span{
-      @apply text-red-500;
+      @apply text-[#00ffcc];
     }
   }
 
